Generate new oneof in operation.proto
