# pkg/api/types/balance/v1/balance.pb.go
@@ -1,0 +1,132 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        (unknown)
+// source: types/balance/v1/balance.proto
+
+package v1
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+// Данные баланса
+type Balance struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Id            string                 `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`                              // ID Счета - юзера
+	IsFrozen      bool                   `protobuf:"varint,2,opt,name=is_frozen,json=isFrozen,proto3" json:"is_frozen,omitempty"` // Флаг - заморожен счет или нет
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *Balance) Reset() {
+	*x = Balance{}
+	mi := &file_types_balance_v1_balance_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Balance) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Balance) ProtoMessage() {}
+
+func (x *Balance) ProtoReflect() protoreflect.Message {
+	mi := &file_types_balance_v1_balance_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Balance.ProtoReflect.Descriptor instead.
+func (*Balance) Descriptor() ([]byte, []int) {
+	return file_types_balance_v1_balance_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Balance) GetId() string {
+	if x != nil {
+		return x.Id
+	}
+	return ""
+}
+
+func (x *Balance) GetIsFrozen() bool {
+	if x != nil {
+		return x.IsFrozen
+	}
+	return false
+}
+
+var File_types_balance_v1_balance_proto protoreflect.FileDescriptor
+
+const file_types_balance_v1_balance_proto_rawDesc = "" +
+	"\n" +
+	"\x1etypes/balance/v1/balance.proto\x12\x10types.balance.v1\"6\n" +
+	"\aBalance\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\tR\x02id\x12\x1b\n" +
+	"\tis_frozen\x18\x02 \x01(\bR\bisFrozenBBZ@github.com/LexBokun/transaction-service/pkg/api/types/balance/v1b\x06proto3"
+
+var (
+	file_types_balance_v1_balance_proto_rawDescOnce sync.Once
+	file_types_balance_v1_balance_proto_rawDescData []byte
+)
+
+func file_types_balance_v1_balance_proto_rawDescGZIP() []byte {
+	file_types_balance_v1_balance_proto_rawDescOnce.Do(func() {
+		file_types_balance_v1_balance_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_types_balance_v1_balance_proto_rawDesc), len(file_types_balance_v1_balance_proto_rawDesc)))
+	})
+	return file_types_balance_v1_balance_proto_rawDescData
+}
+
+var file_types_balance_v1_balance_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_types_balance_v1_balance_proto_goTypes = []any{
+	(*Balance)(nil), // 0: types.balance.v1.Balance
+}
+var file_types_balance_v1_balance_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_types_balance_v1_balance_proto_init() }
+func file_types_balance_v1_balance_proto_init() {
+	if File_types_balance_v1_balance_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_types_balance_v1_balance_proto_rawDesc), len(file_types_balance_v1_balance_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_types_balance_v1_balance_proto_goTypes,
+		DependencyIndexes: file_types_balance_v1_balance_proto_depIdxs,
+		MessageInfos:      file_types_balance_v1_balance_proto_msgTypes,
+	}.Build()
+	File_types_balance_v1_balance_proto = out.File
+	file_types_balance_v1_balance_proto_goTypes = nil
+	file_types_balance_v1_balance_proto_depIdxs = nil
+}
