# pkg/api/types/cryptowallet/v1/crypto_wallet.pb.go
@@ -1,0 +1,123 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        (unknown)
+// source: types/cryptowallet/v1/crypto_wallet.proto
+
+package v1
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+// Данные о крипто-кошельке
+type CryptoWallet struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Address       string                 `protobuf:"bytes,1,opt,name=address,proto3" json:"address,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CryptoWallet) Reset() {
+	*x = CryptoWallet{}
+	mi := &file_types_cryptowallet_v1_crypto_wallet_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CryptoWallet) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CryptoWallet) ProtoMessage() {}
+
+func (x *CryptoWallet) ProtoReflect() protoreflect.Message {
+	mi := &file_types_cryptowallet_v1_crypto_wallet_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CryptoWallet.ProtoReflect.Descriptor instead.
+func (*CryptoWallet) Descriptor() ([]byte, []int) {
+	return file_types_cryptowallet_v1_crypto_wallet_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *CryptoWallet) GetAddress() string {
+	if x != nil {
+		return x.Address
+	}
+	return ""
+}
+
+var File_types_cryptowallet_v1_crypto_wallet_proto protoreflect.FileDescriptor
+
+const file_types_cryptowallet_v1_crypto_wallet_proto_rawDesc = "" +
+	"\n" +
+	")types/cryptowallet/v1/crypto_wallet.proto\x12\x15types.cryptowallet.v1\"(\n" +
+	"\fCryptoWallet\x12\x18\n" +
+	"\aaddress\x18\x01 \x01(\tR\aaddressBGZEgithub.com/LexBokun/transaction-service/pkg/api/types/cryptowallet/v1b\x06proto3"
+
+var (
+	file_types_cryptowallet_v1_crypto_wallet_proto_rawDescOnce sync.Once
+	file_types_cryptowallet_v1_crypto_wallet_proto_rawDescData []byte
+)
+
+func file_types_cryptowallet_v1_crypto_wallet_proto_rawDescGZIP() []byte {
+	file_types_cryptowallet_v1_crypto_wallet_proto_rawDescOnce.Do(func() {
+		file_types_cryptowallet_v1_crypto_wallet_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_types_cryptowallet_v1_crypto_wallet_proto_rawDesc), len(file_types_cryptowallet_v1_crypto_wallet_proto_rawDesc)))
+	})
+	return file_types_cryptowallet_v1_crypto_wallet_proto_rawDescData
+}
+
+var file_types_cryptowallet_v1_crypto_wallet_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_types_cryptowallet_v1_crypto_wallet_proto_goTypes = []any{
+	(*CryptoWallet)(nil), // 0: types.cryptowallet.v1.CryptoWallet
+}
+var file_types_cryptowallet_v1_crypto_wallet_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_types_cryptowallet_v1_crypto_wallet_proto_init() }
+func file_types_cryptowallet_v1_crypto_wallet_proto_init() {
+	if File_types_cryptowallet_v1_crypto_wallet_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_types_cryptowallet_v1_crypto_wallet_proto_rawDesc), len(file_types_cryptowallet_v1_crypto_wallet_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_types_cryptowallet_v1_crypto_wallet_proto_goTypes,
+		DependencyIndexes: file_types_cryptowallet_v1_crypto_wallet_proto_depIdxs,
+		MessageInfos:      file_types_cryptowallet_v1_crypto_wallet_proto_msgTypes,
+	}.Build()
+	File_types_cryptowallet_v1_crypto_wallet_proto = out.File
+	file_types_cryptowallet_v1_crypto_wallet_proto_goTypes = nil
+	file_types_cryptowallet_v1_crypto_wallet_proto_depIdxs = nil
+}
